# skyline-shared-memory

./: CHANGELOG.MD  CMakeLists.txt
src/: logger.cc  logger.hh  main.cc  memory.hh
src/memory/: console.cc  get.cc  manager.cc  manager.hh  memory.hh  remove.cc  set.cc
test/: get.js  set.js
